--- a/rideSharing/Info.plist
+++ b/rideSharing/Info.plist
@@ -41,5 +41,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>The Apps need your location for navigation.</string>
 </dict>
 </plist>
